# kalshi-bot

./: .env.example  .gitignore  AGENTS.md  README.md  chicago_vs_cleveland_winner_v2_20251219.md  discover_sports.py  generate_curl.py  golden_state_vs_portland_winner_v2_20251214.md  houston_vs_denver_winner_v2_20251220.md  los_angeles_l_vs_phoenix_winner_v2_20251214.md  miami_vs_boston_winner_v2_20251219.md  milwaukee_vs_brooklyn_winner_v2_20251214.md  new_orleans_vs_chicago_winner_v2_20251214.md  oklahoma_city_vs_minnesota_winner_v2_20251219.md  philadelphia_vs_atlanta_winner_v2_20251214.md  philadelphia_vs_new_york_winner_v2_20251219.md  pyproject.toml  sacramento_vs_minnesota_winner_v2_20251214.md  san_antonio_vs_atlanta_winner_v2_20251219.md  streamlit_app.py  test_research.py
.streamlit/: config.toml
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
research_findings/: boston_vs_toronto_winner_20251207.md  elche_vs_girona_winner_20251206.md  los_angeles_c_vs_minnesota_winner_20251206.md  manchester_united_vs_bournemouth_winner_20251208.md  miami_vs_orlando_winner_v2_20251209.md  miami_vs_vancover.md  new_orleans_vs_brooklyn_winner_20251206.md  orlando_vs_new_york_k_winner_20251207.md  osasuna_vs_levante_winner_20251206.md  portland_vs_memphis_winner_20251207.md  real_madrid_vs_celta_vigo_winner_20251206.md  real_madrid_vs_celta_vigo_winner_20251207.md  valencia_vs_sevilla_winner_20251206.md  wolverhampton_vs_manchester_united_winner_20251208.md
src/: api.py  (+15 more)
(+15 files in other folders)
